# docs/swagger.json
@@ -36,6 +36,44 @@
                     }
                 }
             }
+        },
+        "/api/v1/wallets/:wallet-type": {
+            "get": {
+                "description": "Get a wallet by Wallet type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallet"
+                ],
+                "summary": "Get a wallet by Wallet type",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "wallet-type",
+                        "name": "wallet-type",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/wallet.Wallet"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/wallet.Err"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
