# main.go
@@ -23,7 +23,8 @@ func main() {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	handler := wallet.New(p)
 	e.GET("/api/v1/wallets", handler.WalletHandler)
-	e.GET("/api/v1/wallets/:wallet_type", handler.WalletByUserIdHandler)
+	e.GET("/api/v1/wallets/:wallet_type", handler.WalletByWalletTypeHandler)
+	e.GET("/api/v1/users/:user_id/wallets", handler.WalletByUserIdHandler)
 
 	e.Logger.Fatal(e.Start(":1323"))
 }
