# wallet/handler.go
@@ -13,6 +13,7 @@ type Handler struct {
 type Storer interface {
 	Wallets() ([]Wallet, error)
 	Wallet(userId string) ([]Wallet, error)
+	WalletByUserId(userId string) ([]Wallet, error)
 }
 
 func New(db Storer) *Handler {
@@ -40,19 +41,31 @@ func (h *Handler) WalletHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, wallets)
 }
 
-// WalletByUserIdHandler
-//	@Summary		Get a wallet by User Id
-//	@Description	Get a wallet by User Id
+// WalletByWalletTypeHandler
+//	@Summary		Get a wallet by Wallet type
+//	@Description	Get a wallet by Wallet type
+//  @Param			wallet-type	path	string	true	"wallet-type"
 //	@Tags			wallet
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{object}	Wallet
-//	@Router			/api/v1/wallets/:user-id [get]
+//	@Router			/api/v1/wallets/:wallet-type [get]
 //	@Failure		500	{object}	Err
-func (h *Handler) WalletByUserIdHandler(c echo.Context) error {
+func (h *Handler) WalletByWalletTypeHandler(c echo.Context) error {
 	walletType := c.Param("wallet_type")
 
 	wallet, err := h.store.Wallet(walletType)
+
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, Err{Message: err.Error()})
+	}
+	return c.JSON(http.StatusOK, wallet)
+}
+
+func (h *Handler) WalletByUserIdHandler(c echo.Context) error {
+	userId := c.Param("user_id")
+
+	wallet, err := h.store.WalletByUserId(userId)
 
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, Err{Message: err.Error()})
